- refactored data structure - got rid of groups - added real DB connection and reconnect routine - new SQL requests for User - fixed wrong migration
