# api/api.swagger.json
@@ -16,121 +16,6 @@
     "application/json"
   ],
   "paths": {
-    "/group": {
-      "post": {
-        "operationId": "NewsfeedConfigurator_addGroup",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiGroupId"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/apiAddGroupRequest"
-            }
-          }
-        ],
-        "tags": [
-          "NewsfeedConfigurator"
-        ]
-      }
-    },
-    "/group/{id}": {
-      "delete": {
-        "operationId": "NewsfeedConfigurator_deleteGroup",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "properties": {}
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "int64"
-          }
-        ],
-        "tags": [
-          "NewsfeedConfigurator"
-        ]
-      },
-      "patch": {
-        "operationId": "NewsfeedConfigurator_updateGroup",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "properties": {}
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "int64"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userId": {
-                  "type": "string",
-                  "format": "int64"
-                },
-                "active": {
-                  "type": "boolean"
-                },
-                "name": {
-                  "type": "string"
-                },
-                "filter": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        ],
-        "tags": [
-          "NewsfeedConfigurator"
-        ]
-      }
-    },
     "/user/{id}": {
       "delete": {
         "operationId": "NewsfeedConfigurator_deleteUser",
@@ -221,37 +106,12 @@
             "in": "path",
             "required": true,
             "type": "boolean"
-          }
-        ],
-        "tags": [
-          "NewsfeedConfigurator"
-        ]
-      }
-    },
-    "/user/{id}/groups": {
-      "get": {
-        "operationId": "NewsfeedConfigurator_listUserGroups",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/apiListUserGroupsResponse"
-            }
           },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
           {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "int64"
+            "name": "filter",
+            "in": "query",
+            "required": false,
+            "type": "string"
           }
         ],
         "tags": [
@@ -261,70 +121,13 @@
     }
   },
   "definitions": {
-    "apiAddGroupRequest": {
-      "type": "object",
-      "properties": {
-        "userId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "name": {
-          "type": "string"
-        },
-        "filter": {
-          "type": "string"
-        }
-      }
-    },
-    "apiGroup": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        },
-        "userId": {
-          "type": "string",
-          "format": "int64"
-        },
-        "active": {
-          "type": "boolean"
-        },
-        "name": {
-          "type": "string"
-        },
-        "filter": {
-          "type": "string"
-        }
-      }
-    },
-    "apiGroupId": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "int64"
-        }
-      }
-    },
-    "apiListGroupSourcesResponse": {
+    "apiListUserSourcesResponse": {
       "type": "object",
       "properties": {
         "sources": {
           "type": "array",
           "items": {
             "$ref": "#/definitions/apiSource"
-          }
-        }
-      }
-    },
-    "apiListUserGroupsResponse": {
-      "type": "object",
-      "properties": {
-        "groups": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/apiGroup"
           }
         }
       }
@@ -336,15 +139,15 @@
           "type": "string",
           "format": "int64"
         },
-        "groupId": {
+        "userId": {
           "type": "string",
           "format": "int64"
         },
-        "name": {
-          "type": "string"
-        },
         "active": {
           "type": "boolean"
+        },
+        "name": {
+          "type": "string"
         },
         "type": {
           "type": "string"
